Handle list name overflow in list view Fixes #127

--- a/frontend/src/components/css/ListView.css
+++ b/frontend/src/components/css/ListView.css
@@ -19,6 +19,7 @@
 	text-decoration: none;
 	color: black;
 	font-size: 18pt;
+	max-width: 70%;
 }
 
 .active {
